core/devtools/mblink_devtools.h

typedef struct {
    const char* bind_host;
    unsigned short port;
    const char* auth_token;
    bool require_auth;
} MBlinkDevToolsHttpOptions;
typedef struct {
    unsigned short port;
    char* url;
    char* auth_token;
} MBlinkDevToolsHttpInfo;
typedef struct {
    const char* runtime_epoch;
    size_t max_nodes;
    int max_depth;
    const char* root_selector;
    bool include_screenshot;
    bool inline_screenshot;
    const char* screenshot_file;
} MBlinkUiDevSnapshotOptions;