bindings/rust/mblink-sys/src/lib.rs

#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(non_upper_case_globals)]

use std::ffi::{c_char, c_int, c_void};

#[cfg(not(all(target_os = "windows", mblink_runtime_load)))]
use std::{env, path::PathBuf, sync::OnceLock};

#[cfg(all(target_os = "windows", mblink_runtime_load))]
mod windows_runtime;

#[cfg(all(target_os = "windows", mblink_runtime_load))]
pub use windows_runtime::*;

pub enum MBlinkWindow {}
pub type MBlinkHandle = *mut MBlinkWindow;

pub enum MBlinkSharedObject {}
pub type MBlinkSharedHandle = *mut MBlinkSharedObject;

pub enum MBlinkLogViewObject {}
pub type MBlinkLogViewHandle = *mut MBlinkLogViewObject;

pub enum MBlinkTerminalObject {}
pub type MBlinkTerminalHandle = *mut MBlinkTerminalObject;

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBlinkError {
    MBLINK_OK = 0,
    MBLINK_ERROR_INVALID_HANDLE = -1,
    MBLINK_ERROR_INVALID_PARAM = -2,
    MBLINK_ERROR_NOT_FOUND = -3,
    MBLINK_ERROR_TYPE_MISMATCH = -4,
    MBLINK_ERROR_OUT_OF_RANGE = -5,
    MBLINK_ERROR_JS_ERROR = -6,
    MBLINK_ERROR_UNKNOWN = -99,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBlinkType {
    MBLINK_TYPE_NULL = 0,
    MBLINK_TYPE_BOOL = 1,
    MBLINK_TYPE_INT = 2,
    MBLINK_TYPE_DOUBLE = 3,
    MBLINK_TYPE_STRING = 4,
    MBLINK_TYPE_ARRAY = 5,
    MBLINK_TYPE_OBJECT = 6,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBlinkLifecycleState {
    MBLINK_LIFECYCLE_CREATED = 0,
    MBLINK_LIFECYCLE_LOADED = 1,
    MBLINK_LIFECYCLE_RUNNING = 2,
    MBLINK_LIFECYCLE_CLOSE_REQUESTED = 3,
    MBLINK_LIFECYCLE_STOPPED = 4,
    MBLINK_LIFECYCLE_DESTROYED = 5,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBlinkObserveKind {
    MBLINK_OBSERVE_CONSOLE = 1,
    MBLINK_OBSERVE_ERROR = 2,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBlinkConfig {
    pub title: *const c_char,
    pub width: c_int,
    pub height: c_int,
    pub headless: bool,
    pub borderless: bool,
    pub transparent: bool,
    pub always_on_top: bool,
    pub resizable: bool,
    pub gpu: bool,
    pub fullscreen: bool,
    pub resize_border_width: c_int,
    pub min_width: c_int,
    pub min_height: c_int,
    pub max_width: c_int,
    pub max_height: c_int,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBlinkRuntimeOptions {
    pub runtime_epoch: *const c_char,
    pub load_embedded_runtime: bool,
    pub load_official_preact: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBlinkUiDevSnapshotOptions {
    pub runtime_epoch: *const c_char,
    pub max_nodes: usize,
    pub max_depth: c_int,
    pub root_selector: *const c_char,
    pub include_screenshot: bool,
    pub inline_screenshot: bool,
    pub screenshot_file: *const c_char,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBlinkDevToolsHttpOptions {
    pub bind_host: *const c_char,
    pub port: u16,
    pub auth_token: *const c_char,
    pub require_auth: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBlinkDevToolsHttpInfo {
    pub port: u16,
    pub url: *mut c_char,
    pub auth_token: *mut c_char,
}

pub type MBlinkCallback = Option<unsafe extern "C" fn(*const c_char, *mut c_void) -> *mut c_char>;
pub type MBlinkAsyncCallback =
    Option<unsafe extern "C" fn(*const c_char, *mut c_void) -> *mut c_char>;
pub type MBlinkStateCallback =
    Option<unsafe extern "C" fn(*const c_char, *const c_char, *mut c_void)>;
pub type MBlinkResizeCallback = Option<unsafe extern "C" fn(c_int, c_int, *mut c_void)>;
pub type MBlinkVoidCallback = Option<unsafe extern "C" fn(*mut c_void)>;
pub type MBlinkBoolCallback = Option<unsafe extern "C" fn(*mut c_void) -> bool>;
pub type MBlinkUpdateCallback = Option<unsafe extern "C" fn(f32, *mut c_void)>;
pub type MBlinkObserveCallback =
    Option<unsafe extern "C" fn(MBlinkObserveKind, *const c_char, *mut c_void)>;

#[cfg(not(all(target_os = "windows", mblink_runtime_load)))]
extern "C" {
    pub fn mblink_init() -> c_int;
    pub fn mblink_cleanup();
    pub fn mblink_version() -> *const c_char;
    pub fn mblink_last_error() -> *const c_char;

    pub fn mblink_create(title: *const c_char, width: c_int, height: c_int) -> MBlinkHandle;
    pub fn mblink_create_ex(config: *const MBlinkConfig) -> MBlinkHandle;
    pub fn mblink_default_config() -> MBlinkConfig;
    pub fn mblink_destroy(handle: MBlinkHandle);
    pub fn mblink_run(handle: MBlinkHandle);
    pub fn mblink_stop(handle: MBlinkHandle);
    pub fn mblink_poll_events(handle: MBlinkHandle) -> bool;
    pub fn mblink_wait_events(handle: MBlinkHandle) -> bool;
    pub fn mblink_default_runtime_options() -> MBlinkRuntimeOptions;
    pub fn mblink_configure_runtime(
        handle: MBlinkHandle,
        options: *const MBlinkRuntimeOptions,
    ) -> c_int;
    pub fn mblink_load_embedded_runtime(handle: MBlinkHandle, include_official_preact: bool)
        -> c_int;
    pub fn mblink_load_entry_file(
        handle: MBlinkHandle,
        entry_path: *const c_char,
        execute_html_scripts: bool,
    ) -> c_int;
    pub fn mblink_load_module_file(handle: MBlinkHandle, entry_path: *const c_char) -> c_int;
    pub fn mblink_render_frame(handle: MBlinkHandle, passes: c_int) -> c_int;
    pub fn mblink_runtime_epoch(handle: MBlinkHandle, out_epoch: *mut *mut c_char) -> c_int;
    pub fn mblink_lifecycle_state(handle: MBlinkHandle) -> MBlinkLifecycleState;
    pub fn mblink_lifecycle_reason(handle: MBlinkHandle, out_reason: *mut *mut c_char) -> c_int;

    pub fn mblink_set_title(handle: MBlinkHandle, title: *const c_char) -> c_int;
    pub fn mblink_tray_create(handle: MBlinkHandle, tooltip: *const c_char) -> c_int;
    pub fn mblink_tray_destroy(handle: MBlinkHandle) -> c_int;
    pub fn mblink_tray_set_tooltip(handle: MBlinkHandle, tooltip: *const c_char) -> c_int;
    pub fn mblink_tray_set_menu(handle: MBlinkHandle, menu_json: *const c_char) -> c_int;
    pub fn mblink_tray_set_left_click_callback(
        handle: MBlinkHandle,
        callback: MBlinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_tray_set_menu_callback(
        handle: MBlinkHandle,
        callback: MBlinkCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_set_size(handle: MBlinkHandle, width: c_int, height: c_int) -> c_int;
    pub fn mblink_get_size(handle: MBlinkHandle, width: *mut c_int, height: *mut c_int) -> c_int;
    pub fn mblink_set_position(handle: MBlinkHandle, x: c_int, y: c_int) -> c_int;
    pub fn mblink_get_position(handle: MBlinkHandle, x: *mut c_int, y: *mut c_int) -> c_int;
    pub fn mblink_set_min_size(handle: MBlinkHandle, width: c_int, height: c_int) -> c_int;
    pub fn mblink_set_max_size(handle: MBlinkHandle, width: c_int, height: c_int) -> c_int;
    pub fn mblink_show(handle: MBlinkHandle) -> c_int;
    pub fn mblink_hide(handle: MBlinkHandle) -> c_int;
    pub fn mblink_minimize(handle: MBlinkHandle) -> c_int;
    pub fn mblink_maximize(handle: MBlinkHandle) -> c_int;
    pub fn mblink_restore(handle: MBlinkHandle) -> c_int;
    pub fn mblink_set_fullscreen(handle: MBlinkHandle, fullscreen: bool) -> c_int;
    pub fn mblink_set_resizable(handle: MBlinkHandle, resizable: bool) -> c_int;
    pub fn mblink_set_borderless(handle: MBlinkHandle, borderless: bool) -> c_int;
    pub fn mblink_set_always_on_top(handle: MBlinkHandle, on_top: bool) -> c_int;

    pub fn mblink_load_html(handle: MBlinkHandle, html: *const c_char) -> c_int;
    pub fn mblink_load_html_file(handle: MBlinkHandle, filepath: *const c_char) -> c_int;
    pub fn mblink_eval_js(handle: MBlinkHandle, code: *const c_char) -> c_int;
    pub fn mblink_eval_module(
        handle: MBlinkHandle,
        code: *const c_char,
        filename: *const c_char,
    ) -> c_int;
    pub fn mblink_load_js_file(handle: MBlinkHandle, filepath: *const c_char) -> c_int;
    pub fn mblink_load_bytecode(handle: MBlinkHandle, data: *const c_void, size: usize) -> c_int;
    pub fn mblink_compile_resources(
        input_path: *const c_char,
        output_file: *const c_char,
        encryption_key: *const c_char,
    ) -> c_int;
    pub fn mblink_load_resource_file(
        package_file: *const c_char,
        resource_path: *const c_char,
        encryption_key: *const c_char,
        out_data: *mut *mut c_void,
        out_size: *mut usize,
        out_flags: *mut u32,
    ) -> c_int;
    pub fn mblink_mount_resource_package(
        handle: MBlinkHandle,
        package_file: *const c_char,
        encryption_key: *const c_char,
        mount_point: *const c_char,
    ) -> c_int;
    pub fn mblink_emit(
        handle: MBlinkHandle,
        event_name: *const c_char,
        data_json: *const c_char,
    ) -> c_int;
    pub fn mblink_observe_set_callback(
        handle: MBlinkHandle,
        callback: MBlinkObserveCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_observe_console_json(handle: MBlinkHandle, out_json: *mut *mut c_char) -> c_int;
    pub fn mblink_observe_errors_json(handle: MBlinkHandle, out_json: *mut *mut c_char) -> c_int;
    pub fn mblink_observe_lifecycle_json(handle: MBlinkHandle, out_json: *mut *mut c_char) -> c_int;
    pub fn mblink_observe_clear(handle: MBlinkHandle, kind: MBlinkObserveKind) -> c_int;
    pub fn mblink_state_create_null(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_create_bool(handle: MBlinkHandle, name: *const c_char, value: bool) -> c_int;
    pub fn mblink_state_create_int(handle: MBlinkHandle, name: *const c_char, value: i64) -> c_int;
    pub fn mblink_state_create_double(handle: MBlinkHandle, name: *const c_char, value: f64)
        -> c_int;
    pub fn mblink_state_create_string(
        handle: MBlinkHandle,
        name: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mblink_state_create_array(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_create_object(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_create_json(
        handle: MBlinkHandle,
        name: *const c_char,
        json: *const c_char,
    ) -> c_int;

    pub fn mblink_bind(
        handle: MBlinkHandle,
        name: *const c_char,
        callback: MBlinkCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_bind_async(
        handle: MBlinkHandle,
        name: *const c_char,
        callback: MBlinkAsyncCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_unbind(handle: MBlinkHandle, name: *const c_char);
    pub fn mblink_on_resize(
        handle: MBlinkHandle,
        callback: MBlinkResizeCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_on_close(
        handle: MBlinkHandle,
        callback: MBlinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_on_close_request(
        handle: MBlinkHandle,
        callback: MBlinkBoolCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_on_focus(
        handle: MBlinkHandle,
        callback: MBlinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_on_blur(
        handle: MBlinkHandle,
        callback: MBlinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_on_update(
        handle: MBlinkHandle,
        callback: MBlinkUpdateCallback,
        user_data: *mut c_void,
    ) -> c_int;
